--- a/css/style.css
+++ b/css/style.css
@@ -32,27 +32,23 @@ body {
 .header {
   min-height: 650px;
   height: 100vh;
-  background-image: url("../images/image.png");
+  background-image: linear-gradient(var(--black-color-transparent-66), var(--black-color-transparent-40)), url("../images/image.png");
   background-size: cover;
   background-position: 50% 0;
   background-repeat: no-repeat;
-  position: relative;
-  z-index: 0;
 }
 .header__nav {
   height: 90px;
-  position: relative;
-  z-index: 1;
+  background-color: var(--black-color-transparent-66);
+  border-bottom: 2px solid var(--white-transparent-33);
 }
 
 .header__nav .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: var(--primary-font), sans-serif;
   font-weight: bold;
   text-transform: uppercase;
-  color: var(--white-color);
   height: 100%;
 }
 .header__nav-logo {
@@ -66,6 +62,7 @@ body {
 
 .header__logo-text {
   font: normal normal 800 35px var(--primary-font), sans-serif;
+  color: var(--white-color);
 }
 .header__logo-text span {
   color: var(--secondary-color);
@@ -74,13 +71,23 @@ body {
   display: flex;
   height: 100%;
 }
-.header__nav-list li {
+.header__nav-list-item,
+.header__nav-list-item a {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 128px;
-  font: normal normal bold 1em var(--primary-font), sans-serif;
   height: 100%;
+}
+
+.header__nav-list-item a {
+  font: normal normal bold 1em var(--primary-font), sans-serif;
+  text-decoration: none;
+  color: var(--white-color);
+}
+
+.header__nav-list-item:hover {
+  background-color: var(--white-transparent-33);
 }
 /* TODO: .header__nav-list li:hover {} */
 
@@ -90,12 +97,11 @@ body {
   justify-content: space-between;
   align-items: center;
   position: absolute;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
-  top: 254px;
+  transform: translate(-50%, -50%);
   width: 100%;
   max-width: 1088px;
-  font-family: "Nunito Sans", sans-serif;
   color: var(--white-color);
   text-align: center;
 }
